clusters/vollminlab-cluster/mediastack/filebrowser/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  namespace: mediastack
  labels:
    app: filebrowser
    env: production
    category: apps
    app.kubernetes.io/name: filebrowser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
        env: production
        category: apps
        app.kubernetes.io/name: filebrowser
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: filebrowser
          image: filebrowser/filebrowser:v2.63.3
          args: ["--config", "/config/settings.json"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /config
            - name: settings
              mountPath: /config/settings.json
              subPath: settings.json
            - name: audiobooks-incoming
              mountPath: /srv/Audiobooks
            - name: misc-incoming
              mountPath: /srv/Misc
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: pvc-filebrowser-config
        - name: settings
          configMap:
            name: filebrowser-settings
        - name: audiobooks-incoming
          persistentVolumeClaim:
            claimName: pvc-audiobooks-incoming
        - name: misc-incoming
          persistentVolumeClaim:
            claimName: pvc-misc-incoming
